[package]
name = "os"
version = "0.1.0"
authors = ["deepzirox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[unstable]
build-std = ["core", "compiler_builtins"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
